(library
 (public_name sqlite3)
 (foreign_stubs
  (language c)
  (names sqlite3_stubs)
  (flags
   (:standard)
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (env_var PKG_CONFIG_PATH)
  (env_var SQLITE3_DISABLE_LOADABLE_EXTENSIONS)
  (env_var SQLITE3_OCAML_BREWCHECK)
  (env_var SQLITE3_OCAML_DISABLE_OPTLEVEL))
 (action
  (run ./config/discover.exe)))
